--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <body>
-   <img alt="" src="./imagens/barra_procc.png"/>
+   <img alt="" src="https://ogcruz.github.io/imagens/barra_procc.png"/>
 
   <h1 id="_1">
   </h1>
