--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </h3>
   <p>
    Clique
-   <a href="aula_sql/sql7.md">
+   <a href="aula_sql/sql7.html">
     AQUI para a aula 2
    </a>
   </p>
