--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </h3>
   <p>
    Clique
-   <a href="importando/import.md">
+   <a href="importando/import.html">
     AQUI para a aula 3
    </a>
   </p>
@@ -71,7 +71,7 @@
   </h3>
   <p>
    Clique
-   <a href="limpando/tidyverse.md">
+   <a href="limpando/tidyverse.html">
     AQUI para a aula 4
    </a>
   </p>
