ajustes de ultissima hora

--- a/Bookdown/apresentacao.html
+++ b/Bookdown/apresentacao.html
@@ -203,27 +203,29 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="3.22" data-path="introducao-as-series-temporais.html"><a href="introducao-as-series-temporais.html#bibliografia-sugerida-1"><i class="fa fa-check"></i><b>3.22</b> Bibliografia sugerida</a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="transformacoes.html"><a href="transformacoes.html"><i class="fa fa-check"></i><b>4</b> Transformações</a><ul>
-<li class="chapter" data-level="4.0.1" data-path="transformacoes.html"><a href="transformacoes.html#alguns-exemplos-de-transfomacao-dos-dados-em-st"><i class="fa fa-check"></i><b>4.0.1</b> Alguns exemplos de transfomação dos dados em ST:</a></li>
-<li class="chapter" data-level="4.0.2" data-path="transformacoes.html"><a href="transformacoes.html#transformacoes-box-cox-digferenciacao-e-logaritmica"><i class="fa fa-check"></i><b>4.0.2</b> Transformações Box-Cox, Digferenciação e Logarítmica</a></li>
-<li class="chapter" data-level="4.1" data-path="transformacoes.html"><a href="transformacoes.html#metodos-de-alisamento-ou-suavizacao"><i class="fa fa-check"></i><b>4.1</b> Métodos de Alisamento ou Suavização</a><ul>
-<li class="chapter" data-level="4.1.1" data-path="transformacoes.html"><a href="transformacoes.html#algumas-funcoes-de-suavizacao"><i class="fa fa-check"></i><b>4.1.1</b> Algumas funções de suavização</a></li>
-<li class="chapter" data-level="4.1.2" data-path="transformacoes.html"><a href="transformacoes.html#medias-moveis"><i class="fa fa-check"></i><b>4.1.2</b> Médias móveis</a></li>
-<li class="chapter" data-level="4.1.3" data-path="transformacoes.html"><a href="transformacoes.html#utilizacao-das-medias-moveis"><i class="fa fa-check"></i><b>4.1.3</b> Utilização das Médias Móveis</a></li>
+<li class="chapter" data-level="4.1" data-path="transformacoes.html"><a href="transformacoes.html#transformacoes-e-suavisacoes"><i class="fa fa-check"></i><b>4.1</b> Transformações e Suavisações</a><ul>
+<li class="chapter" data-level="4.1.1" data-path="transformacoes.html"><a href="transformacoes.html#alguns-exemplos-de-transfomacao-dos-dados-em-st"><i class="fa fa-check"></i><b>4.1.1</b> Alguns exemplos de transfomação dos dados em ST:</a></li>
+<li class="chapter" data-level="4.1.2" data-path="transformacoes.html"><a href="transformacoes.html#transformacoes-box-cox-digferenciacao-e-logaritmica"><i class="fa fa-check"></i><b>4.1.2</b> Transformações Box-Cox, Digferenciação e Logarítmica</a></li>
 </ul></li>
-<li class="chapter" data-level="4.2" data-path="transformacoes.html"><a href="transformacoes.html#kernel"><i class="fa fa-check"></i><b>4.2</b> Kernel</a><ul>
-<li class="chapter" data-level="4.2.1" data-path="transformacoes.html"><a href="transformacoes.html#diferentes-funcoes-kernel"><i class="fa fa-check"></i><b>4.2.1</b> Diferentes Funções Kernel</a></li>
-<li class="chapter" data-level="4.2.2" data-path="transformacoes.html"><a href="transformacoes.html#largura-de-banda"><i class="fa fa-check"></i><b>4.2.2</b> Largura de Banda</a></li>
-<li class="chapter" data-level="4.2.3" data-path="transformacoes.html"><a href="transformacoes.html#utilizacao-do-kernel"><i class="fa fa-check"></i><b>4.2.3</b> Utilização do Kernel</a></li>
+<li class="chapter" data-level="4.2" data-path="transformacoes.html"><a href="transformacoes.html#metodos-de-alisamento-ou-suavizacao"><i class="fa fa-check"></i><b>4.2</b> Métodos de Alisamento ou Suavização</a><ul>
+<li class="chapter" data-level="4.2.1" data-path="transformacoes.html"><a href="transformacoes.html#algumas-funcoes-de-suavizacao"><i class="fa fa-check"></i><b>4.2.1</b> Algumas funções de suavização</a></li>
+<li class="chapter" data-level="4.2.2" data-path="transformacoes.html"><a href="transformacoes.html#medias-moveis"><i class="fa fa-check"></i><b>4.2.2</b> Médias móveis</a></li>
+<li class="chapter" data-level="4.2.3" data-path="transformacoes.html"><a href="transformacoes.html#utilizacao-das-medias-moveis"><i class="fa fa-check"></i><b>4.2.3</b> Utilização das Médias Móveis</a></li>
 </ul></li>
-<li class="chapter" data-level="4.3" data-path="transformacoes.html"><a href="transformacoes.html#lowess-locally-weighted-sum-of-square"><i class="fa fa-check"></i><b>4.3</b> Lowess (Locally Weighted Sum of Square)</a><ul>
-<li class="chapter" data-level="4.3.1" data-path="transformacoes.html"><a href="transformacoes.html#utilizacao-do-lowess"><i class="fa fa-check"></i><b>4.3.1</b> Utilização do Lowess</a></li>
-<li class="chapter" data-level="4.3.2" data-path="transformacoes.html"><a href="transformacoes.html#comparando"><i class="fa fa-check"></i><b>4.3.2</b> Comparando</a></li>
+<li class="chapter" data-level="4.3" data-path="transformacoes.html"><a href="transformacoes.html#kernel"><i class="fa fa-check"></i><b>4.3</b> Kernel</a><ul>
+<li class="chapter" data-level="4.3.1" data-path="transformacoes.html"><a href="transformacoes.html#diferentes-funcoes-kernel"><i class="fa fa-check"></i><b>4.3.1</b> Diferentes Funções Kernel</a></li>
+<li class="chapter" data-level="4.3.2" data-path="transformacoes.html"><a href="transformacoes.html#largura-de-banda"><i class="fa fa-check"></i><b>4.3.2</b> Largura de Banda</a></li>
+<li class="chapter" data-level="4.3.3" data-path="transformacoes.html"><a href="transformacoes.html#utilizacao-do-kernel"><i class="fa fa-check"></i><b>4.3.3</b> Utilização do Kernel</a></li>
 </ul></li>
-<li class="chapter" data-level="4.4" data-path="transformacoes.html"><a href="transformacoes.html#splines"><i class="fa fa-check"></i><b>4.4</b> Splines</a><ul>
-<li class="chapter" data-level="4.4.1" data-path="transformacoes.html"><a href="transformacoes.html#splines-vs-loess"><i class="fa fa-check"></i><b>4.4.1</b> Splines <em>vs</em> Loess</a></li>
+<li class="chapter" data-level="4.4" data-path="transformacoes.html"><a href="transformacoes.html#lowess-locally-weighted-sum-of-square"><i class="fa fa-check"></i><b>4.4</b> Lowess (Locally Weighted Sum of Square)</a><ul>
+<li class="chapter" data-level="4.4.1" data-path="transformacoes.html"><a href="transformacoes.html#utilizacao-do-lowess"><i class="fa fa-check"></i><b>4.4.1</b> Utilização do Lowess</a></li>
+<li class="chapter" data-level="4.4.2" data-path="transformacoes.html"><a href="transformacoes.html#comparando"><i class="fa fa-check"></i><b>4.4.2</b> Comparando</a></li>
 </ul></li>
-<li class="chapter" data-level="4.5" data-path="transformacoes.html"><a href="transformacoes.html#exercicios-propostos-2"><i class="fa fa-check"></i><b>4.5</b> Exercícios Propostos</a></li>
-<li class="chapter" data-level="4.6" data-path="transformacoes.html"><a href="transformacoes.html#bibliografia-sugerida-2"><i class="fa fa-check"></i><b>4.6</b> Bibliografia sugerida</a></li>
+<li class="chapter" data-level="4.5" data-path="transformacoes.html"><a href="transformacoes.html#splines"><i class="fa fa-check"></i><b>4.5</b> Splines</a><ul>
+<li class="chapter" data-level="4.5.1" data-path="transformacoes.html"><a href="transformacoes.html#splines-vs-loess"><i class="fa fa-check"></i><b>4.5.1</b> Splines <em>vs</em> Loess</a></li>
+</ul></li>
+<li class="chapter" data-level="4.6" data-path="transformacoes.html"><a href="transformacoes.html#exercicios-propostos-2"><i class="fa fa-check"></i><b>4.6</b> Exercícios Propostos</a></li>
+<li class="chapter" data-level="4.7" data-path="transformacoes.html"><a href="transformacoes.html#bibliografia-sugerida-2"><i class="fa fa-check"></i><b>4.7</b> Bibliografia sugerida</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
