--- a/Curso_eco_2021/apresentação.html
+++ b/Curso_eco_2021/apresentação.html
@@ -211,8 +211,54 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="3.20" data-path="introdução-às-séries-temporais.html"><a href="introdução-às-séries-temporais.html#outros-materiais-sobre-séries-temporais"><i class="fa fa-check"></i><b>3.20</b> Outros materiais sobre Séries Temporais</a></li>
 <li class="chapter" data-level="3.21" data-path="introdução-às-séries-temporais.html"><a href="introdução-às-séries-temporais.html#bibliografia-sugerida-1"><i class="fa fa-check"></i><b>3.21</b> Bibliografia sugerida</a></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="séries-temporais-técnicas-de-suavização.html"><a href="séries-temporais-técnicas-de-suavização.html"><i class="fa fa-check"></i><b>4</b> Séries Temporais - Técnicas de Suavização</a></li>
-<li class="chapter" data-level="5" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html"><i class="fa fa-check"></i><b>5</b> Modelagem em Séries Temporais</a></li>
+<li class="chapter" data-level="4" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html"><i class="fa fa-check"></i><b>4</b> Transformações e Suavizações</a>
+<ul>
+<li class="chapter" data-level="4.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#introdução"><i class="fa fa-check"></i><b>4.1</b> Introdução</a></li>
+<li class="chapter" data-level="4.2" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#transfomação-dos-dados-em-st"><i class="fa fa-check"></i><b>4.2</b> Transfomação dos dados em ST</a>
+<ul>
+<li class="chapter" data-level="4.2.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#transformações-box-cox-diferenciação-e-logarítmica"><i class="fa fa-check"></i><b>4.2.1</b> Transformações Box-Cox, Diferenciação e Logarítmica</a></li>
+</ul></li>
+<li class="chapter" data-level="4.3" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#métodos-de-alisamento-ou-suavização"><i class="fa fa-check"></i><b>4.3</b> Métodos de Alisamento ou Suavização</a>
+<ul>
+<li class="chapter" data-level="4.3.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#algumas-funções-de-suavização"><i class="fa fa-check"></i><b>4.3.1</b> Algumas funções de suavização</a></li>
+</ul></li>
+<li class="chapter" data-level="4.4" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#médias-móveis"><i class="fa fa-check"></i><b>4.4</b> Médias móveis</a>
+<ul>
+<li class="chapter" data-level="4.4.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#utilização-das-médias-móveis"><i class="fa fa-check"></i><b>4.4.1</b> Utilização das Médias Móveis</a></li>
+</ul></li>
+<li class="chapter" data-level="4.5" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#kernel"><i class="fa fa-check"></i><b>4.5</b> Kernel</a>
+<ul>
+<li class="chapter" data-level="4.5.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#diferentes-funções-kernel"><i class="fa fa-check"></i><b>4.5.1</b> Diferentes Funções Kernel</a></li>
+<li class="chapter" data-level="4.5.2" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#largura-de-banda"><i class="fa fa-check"></i><b>4.5.2</b> Largura de Banda</a></li>
+<li class="chapter" data-level="4.5.3" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#utilização-do-kernel"><i class="fa fa-check"></i><b>4.5.3</b> Utilização do Kernel</a></li>
+</ul></li>
+<li class="chapter" data-level="4.6" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#loess-lowess"><i class="fa fa-check"></i><b>4.6</b> Loess / Lowess</a>
+<ul>
+<li class="chapter" data-level="4.6.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#utilização-do-loesslowess"><i class="fa fa-check"></i><b>4.6.1</b> Utilização do loess/lowess</a></li>
+<li class="chapter" data-level="4.6.2" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#comparando"><i class="fa fa-check"></i><b>4.6.2</b> Comparando</a></li>
+</ul></li>
+<li class="chapter" data-level="4.7" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#splines"><i class="fa fa-check"></i><b>4.7</b> Splines</a>
+<ul>
+<li class="chapter" data-level="4.7.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#splines-vs-loesslowess"><i class="fa fa-check"></i><b>4.7.1</b> Splines <em>vs</em> Loess/Lowess</a></li>
+</ul></li>
+<li class="chapter" data-level="4.8" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#exercícios-propostos-2"><i class="fa fa-check"></i><b>4.8</b> Exercícios Propostos</a></li>
+<li class="chapter" data-level="4.9" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#bibliografia-sugerida-2"><i class="fa fa-check"></i><b>4.9</b> Bibliografia sugerida</a></li>
+</ul></li>
+<li class="chapter" data-level="5" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html"><i class="fa fa-check"></i><b>5</b> Modelagem em Séries Temporais</a>
+<ul>
+<li class="chapter" data-level="5.1" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#o-que-são-os-modelos-box-jenkins"><i class="fa fa-check"></i><b>5.1</b> O que são os Modelos Box &amp; Jenkins</a></li>
+<li class="chapter" data-level="5.2" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#alguns-processos-estocásticos"><i class="fa fa-check"></i><b>5.2</b> Alguns processos estocásticos</a></li>
+<li class="chapter" data-level="5.3" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelo-arima"><i class="fa fa-check"></i><b>5.3</b> Modelo ARIMA</a>
+<ul>
+<li class="chapter" data-level="5.3.1" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelo-autorregressivo-de-ordem-p---arp-ou-arimap00"><i class="fa fa-check"></i><b>5.3.1</b> Modelo Autorregressivo de ordem <em>p</em> - AR(p) ou ARIMA(p,0,0)</a></li>
+<li class="chapter" data-level="5.3.2" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#condições-de-estacionariedade"><i class="fa fa-check"></i><b>5.3.2</b> Condições de estacionariedade</a></li>
+<li class="chapter" data-level="5.3.3" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelo-de-médias-móveis-de-ordem-q---maq-ou-arima00q"><i class="fa fa-check"></i><b>5.3.3</b> Modelo de Médias Móveis de ordem <em>q</em> - MA(q) ou ARIMA(0,0,q)</a></li>
+<li class="chapter" data-level="5.3.4" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#condições-de-invertibilidade"><i class="fa fa-check"></i><b>5.3.4</b> Condições de invertibilidade</a></li>
+<li class="chapter" data-level="5.3.5" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelo-autorregressivo-de-médias-móveis-de-ordem-p-e-q---armapq-ou-arimap0q"><i class="fa fa-check"></i><b>5.3.5</b> Modelo Autorregressivo de Médias Móveis de ordem <em>p</em> e <em>q</em> - ARMA(p,q) ou ARIMA(p,0,q)</a></li>
+<li class="chapter" data-level="5.3.6" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelo-autorregressivo-integrado-de-médias-móveis-de-ordem-p-d-e-q---arimapdq"><i class="fa fa-check"></i><b>5.3.6</b> Modelo Autorregressivo Integrado de Médias Móveis de ordem <em>p</em>, <em>d</em> e <em>q</em> - ARIMA(p,d,q)</a></li>
+<li class="chapter" data-level="5.3.7" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#resumo---modelos-arima-não-sazonais"><i class="fa fa-check"></i><b>5.3.7</b> Resumo - Modelos ARIMA não sazonais</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="6" data-path="introdução-à-análise-estatística-espacial-padrão-de-pontos-i.html"><a href="introdução-à-análise-estatística-espacial-padrão-de-pontos-i.html"><i class="fa fa-check"></i><b>6</b> Introdução à Análise Estatística Espacial &amp; Padrão de Pontos I</a></li>
 <li class="chapter" data-level="7" data-path="análise-espacial-padrão-de-pontos-ii.html"><a href="análise-espacial-padrão-de-pontos-ii.html"><i class="fa fa-check"></i><b>7</b> Análise Espacial - Padrão de Pontos II</a></li>
 <li class="chapter" data-level="8" data-path="análise-espacial-dados-de-área-i.html"><a href="análise-espacial-dados-de-área-i.html"><i class="fa fa-check"></i><b>8</b> Análise Espacial - Dados de Área I</a></li>
@@ -246,8 +292,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="13.10" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#vantagens-1"><i class="fa fa-check"></i><b>13.10</b> Vantagens</a></li>
 <li class="chapter" data-level="13.11" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#desvantagens-1"><i class="fa fa-check"></i><b>13.11</b> Desvantagens</a></li>
 <li class="chapter" data-level="13.12" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#resumindo-1"><i class="fa fa-check"></i><b>13.12</b> Resumindo</a></li>
-<li class="chapter" data-level="13.13" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#exercícios-propostos-2"><i class="fa fa-check"></i><b>13.13</b> Exercícios Propostos</a></li>
-<li class="chapter" data-level="13.14" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#bibliografia-sugerida-2"><i class="fa fa-check"></i><b>13.14</b> Bibliografia sugerida</a></li>
+<li class="chapter" data-level="13.13" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#exercícios-propostos-3"><i class="fa fa-check"></i><b>13.13</b> Exercícios Propostos</a></li>
+<li class="chapter" data-level="13.14" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#bibliografia-sugerida-3"><i class="fa fa-check"></i><b>13.14</b> Bibliografia sugerida</a></li>
 </ul></li>
 <li class="chapter" data-level="14" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html"><i class="fa fa-check"></i><b>14</b> Introdução às Séries Temporais</a>
 <ul>
@@ -286,9 +332,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="14.18.3" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#importando-uma-vetor-e-transformando-em-série-temporal-1"><i class="fa fa-check"></i><b>14.18.3</b> Importando uma vetor e transformando em Série Temporal</a></li>
 <li class="chapter" data-level="14.18.4" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#utilizando-dados-da-incidência-de-dengue-nas-filipinas-2008---2016-1"><i class="fa fa-check"></i><b>14.18.4</b> Utilizando dados da incidência de dengue nas Filipinas, 2008 - 2016</a></li>
 </ul></li>
-<li class="chapter" data-level="14.19" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#exercícios-propostos-3"><i class="fa fa-check"></i><b>14.19</b> Exercícios Propostos</a></li>
+<li class="chapter" data-level="14.19" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#exercícios-propostos-4"><i class="fa fa-check"></i><b>14.19</b> Exercícios Propostos</a></li>
 <li class="chapter" data-level="14.20" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#outros-materiais-sobre-séries-temporais-1"><i class="fa fa-check"></i><b>14.20</b> Outros materiais sobre Séries Temporais</a></li>
-<li class="chapter" data-level="14.21" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#bibliografia-sugerida-3"><i class="fa fa-check"></i><b>14.21</b> Bibliografia sugerida</a></li>
+<li class="chapter" data-level="14.21" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#bibliografia-sugerida-4"><i class="fa fa-check"></i><b>14.21</b> Bibliografia sugerida</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://ogcruz.github.io" target="blank">Página Inicial</a></li>
@@ -313,7 +359,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">ESTUDOS ECOLÓGICOS 2021</h1>
 <p class="author"><em>Oswaldo G Cruz &amp; Laís P Freitas</em></p>
-<p class="date" style="margin-top: 1.5em;"><em>Atualizado em: 14 de maio de 2021</em></p>
+<p class="date" style="margin-top: 1.5em;"><em>Atualizado em: 21 de maio de 2021</em></p>
 </div>
 <div id="apresentação" class="section level1" number="1">
 <h1><span class="header-section-number"> 1</span> Apresentação</h1>
