--- a/Curso_eco_2021/estudos-ecológicos-1.html
+++ b/Curso_eco_2021/estudos-ecológicos-1.html
@@ -211,8 +211,54 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="3.20" data-path="introdução-às-séries-temporais.html"><a href="introdução-às-séries-temporais.html#outros-materiais-sobre-séries-temporais"><i class="fa fa-check"></i><b>3.20</b> Outros materiais sobre Séries Temporais</a></li>
 <li class="chapter" data-level="3.21" data-path="introdução-às-séries-temporais.html"><a href="introdução-às-séries-temporais.html#bibliografia-sugerida-1"><i class="fa fa-check"></i><b>3.21</b> Bibliografia sugerida</a></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="séries-temporais-técnicas-de-suavização.html"><a href="séries-temporais-técnicas-de-suavização.html"><i class="fa fa-check"></i><b>4</b> Séries Temporais - Técnicas de Suavização</a></li>
-<li class="chapter" data-level="5" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html"><i class="fa fa-check"></i><b>5</b> Modelagem em Séries Temporais</a></li>
+<li class="chapter" data-level="4" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html"><i class="fa fa-check"></i><b>4</b> Transformações e Suavizações</a>
+<ul>
+<li class="chapter" data-level="4.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#introdução"><i class="fa fa-check"></i><b>4.1</b> Introdução</a></li>
+<li class="chapter" data-level="4.2" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#transfomação-dos-dados-em-st"><i class="fa fa-check"></i><b>4.2</b> Transfomação dos dados em ST</a>
+<ul>
+<li class="chapter" data-level="4.2.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#transformações-box-cox-diferenciação-e-logarítmica"><i class="fa fa-check"></i><b>4.2.1</b> Transformações Box-Cox, Diferenciação e Logarítmica</a></li>
+</ul></li>
+<li class="chapter" data-level="4.3" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#métodos-de-alisamento-ou-suavização"><i class="fa fa-check"></i><b>4.3</b> Métodos de Alisamento ou Suavização</a>
+<ul>
+<li class="chapter" data-level="4.3.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#algumas-funções-de-suavização"><i class="fa fa-check"></i><b>4.3.1</b> Algumas funções de suavização</a></li>
+</ul></li>
+<li class="chapter" data-level="4.4" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#médias-móveis"><i class="fa fa-check"></i><b>4.4</b> Médias móveis</a>
+<ul>
+<li class="chapter" data-level="4.4.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#utilização-das-médias-móveis"><i class="fa fa-check"></i><b>4.4.1</b> Utilização das Médias Móveis</a></li>
+</ul></li>
+<li class="chapter" data-level="4.5" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#kernel"><i class="fa fa-check"></i><b>4.5</b> Kernel</a>
+<ul>
+<li class="chapter" data-level="4.5.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#diferentes-funções-kernel"><i class="fa fa-check"></i><b>4.5.1</b> Diferentes Funções Kernel</a></li>
+<li class="chapter" data-level="4.5.2" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#largura-de-banda"><i class="fa fa-check"></i><b>4.5.2</b> Largura de Banda</a></li>
+<li class="chapter" data-level="4.5.3" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#utilização-do-kernel"><i class="fa fa-check"></i><b>4.5.3</b> Utilização do Kernel</a></li>
+</ul></li>
+<li class="chapter" data-level="4.6" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#loess-lowess"><i class="fa fa-check"></i><b>4.6</b> Loess / Lowess</a>
+<ul>
+<li class="chapter" data-level="4.6.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#utilização-do-loesslowess"><i class="fa fa-check"></i><b>4.6.1</b> Utilização do loess/lowess</a></li>
+<li class="chapter" data-level="4.6.2" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#comparando"><i class="fa fa-check"></i><b>4.6.2</b> Comparando</a></li>
+</ul></li>
+<li class="chapter" data-level="4.7" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#splines"><i class="fa fa-check"></i><b>4.7</b> Splines</a>
+<ul>
+<li class="chapter" data-level="4.7.1" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#splines-vs-loesslowess"><i class="fa fa-check"></i><b>4.7.1</b> Splines <em>vs</em> Loess/Lowess</a></li>
+</ul></li>
+<li class="chapter" data-level="4.8" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#exercícios-propostos-2"><i class="fa fa-check"></i><b>4.8</b> Exercícios Propostos</a></li>
+<li class="chapter" data-level="4.9" data-path="transformações-e-suavizações.html"><a href="transformações-e-suavizações.html#bibliografia-sugerida-2"><i class="fa fa-check"></i><b>4.9</b> Bibliografia sugerida</a></li>
+</ul></li>
+<li class="chapter" data-level="5" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html"><i class="fa fa-check"></i><b>5</b> Modelagem em Séries Temporais</a>
+<ul>
+<li class="chapter" data-level="5.1" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#o-que-são-os-modelos-box-jenkins"><i class="fa fa-check"></i><b>5.1</b> O que são os Modelos Box &amp; Jenkins</a></li>
+<li class="chapter" data-level="5.2" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#alguns-processos-estocásticos"><i class="fa fa-check"></i><b>5.2</b> Alguns processos estocásticos</a></li>
+<li class="chapter" data-level="5.3" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelo-arima"><i class="fa fa-check"></i><b>5.3</b> Modelo ARIMA</a>
+<ul>
+<li class="chapter" data-level="5.3.1" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelo-autorregressivo-de-ordem-p---arp-ou-arimap00"><i class="fa fa-check"></i><b>5.3.1</b> Modelo Autorregressivo de ordem <em>p</em> - AR(p) ou ARIMA(p,0,0)</a></li>
+<li class="chapter" data-level="5.3.2" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#condições-de-estacionariedade"><i class="fa fa-check"></i><b>5.3.2</b> Condições de estacionariedade</a></li>
+<li class="chapter" data-level="5.3.3" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelo-de-médias-móveis-de-ordem-q---maq-ou-arima00q"><i class="fa fa-check"></i><b>5.3.3</b> Modelo de Médias Móveis de ordem <em>q</em> - MA(q) ou ARIMA(0,0,q)</a></li>
+<li class="chapter" data-level="5.3.4" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#condições-de-invertibilidade"><i class="fa fa-check"></i><b>5.3.4</b> Condições de invertibilidade</a></li>
+<li class="chapter" data-level="5.3.5" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelo-autorregressivo-de-médias-móveis-de-ordem-p-e-q---armapq-ou-arimap0q"><i class="fa fa-check"></i><b>5.3.5</b> Modelo Autorregressivo de Médias Móveis de ordem <em>p</em> e <em>q</em> - ARMA(p,q) ou ARIMA(p,0,q)</a></li>
+<li class="chapter" data-level="5.3.6" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelo-autorregressivo-integrado-de-médias-móveis-de-ordem-p-d-e-q---arimapdq"><i class="fa fa-check"></i><b>5.3.6</b> Modelo Autorregressivo Integrado de Médias Móveis de ordem <em>p</em>, <em>d</em> e <em>q</em> - ARIMA(p,d,q)</a></li>
+<li class="chapter" data-level="5.3.7" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#resumo---modelos-arima-não-sazonais"><i class="fa fa-check"></i><b>5.3.7</b> Resumo - Modelos ARIMA não sazonais</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="6" data-path="introdução-à-análise-estatística-espacial-padrão-de-pontos-i.html"><a href="introdução-à-análise-estatística-espacial-padrão-de-pontos-i.html"><i class="fa fa-check"></i><b>6</b> Introdução à Análise Estatística Espacial &amp; Padrão de Pontos I</a></li>
 <li class="chapter" data-level="7" data-path="análise-espacial-padrão-de-pontos-ii.html"><a href="análise-espacial-padrão-de-pontos-ii.html"><i class="fa fa-check"></i><b>7</b> Análise Espacial - Padrão de Pontos II</a></li>
 <li class="chapter" data-level="8" data-path="análise-espacial-dados-de-área-i.html"><a href="análise-espacial-dados-de-área-i.html"><i class="fa fa-check"></i><b>8</b> Análise Espacial - Dados de Área I</a></li>
@@ -246,8 +292,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="13.10" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#vantagens-1"><i class="fa fa-check"></i><b>13.10</b> Vantagens</a></li>
 <li class="chapter" data-level="13.11" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#desvantagens-1"><i class="fa fa-check"></i><b>13.11</b> Desvantagens</a></li>
 <li class="chapter" data-level="13.12" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#resumindo-1"><i class="fa fa-check"></i><b>13.12</b> Resumindo</a></li>
-<li class="chapter" data-level="13.13" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#exercícios-propostos-2"><i class="fa fa-check"></i><b>13.13</b> Exercícios Propostos</a></li>
-<li class="chapter" data-level="13.14" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#bibliografia-sugerida-2"><i class="fa fa-check"></i><b>13.14</b> Bibliografia sugerida</a></li>
+<li class="chapter" data-level="13.13" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#exercícios-propostos-3"><i class="fa fa-check"></i><b>13.13</b> Exercícios Propostos</a></li>
+<li class="chapter" data-level="13.14" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#bibliografia-sugerida-3"><i class="fa fa-check"></i><b>13.14</b> Bibliografia sugerida</a></li>
 </ul></li>
 <li class="chapter" data-level="14" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html"><i class="fa fa-check"></i><b>14</b> Introdução às Séries Temporais</a>
 <ul>
@@ -286,9 +332,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="14.18.3" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#importando-uma-vetor-e-transformando-em-série-temporal-1"><i class="fa fa-check"></i><b>14.18.3</b> Importando uma vetor e transformando em Série Temporal</a></li>
 <li class="chapter" data-level="14.18.4" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#utilizando-dados-da-incidência-de-dengue-nas-filipinas-2008---2016-1"><i class="fa fa-check"></i><b>14.18.4</b> Utilizando dados da incidência de dengue nas Filipinas, 2008 - 2016</a></li>
 </ul></li>
-<li class="chapter" data-level="14.19" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#exercícios-propostos-3"><i class="fa fa-check"></i><b>14.19</b> Exercícios Propostos</a></li>
+<li class="chapter" data-level="14.19" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#exercícios-propostos-4"><i class="fa fa-check"></i><b>14.19</b> Exercícios Propostos</a></li>
 <li class="chapter" data-level="14.20" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#outros-materiais-sobre-séries-temporais-1"><i class="fa fa-check"></i><b>14.20</b> Outros materiais sobre Séries Temporais</a></li>
-<li class="chapter" data-level="14.21" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#bibliografia-sugerida-3"><i class="fa fa-check"></i><b>14.21</b> Bibliografia sugerida</a></li>
+<li class="chapter" data-level="14.21" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#bibliografia-sugerida-4"><i class="fa fa-check"></i><b>14.21</b> Bibliografia sugerida</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://ogcruz.github.io" target="blank">Página Inicial</a></li>
@@ -579,8 +625,8 @@ Kawachi I. (Editors). Social Epidemiology. Oxford University Press, 2000) </smal
 <ul>
 <li>Observando os microdados, ou seja, os dados no nível individual, temos o seguinte:</li>
 </ul>
-<div id="htmlwidget-75efa21537f6baccdec5" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-75efa21537f6baccdec5">{"x":{"filter":"top","filterHTML":"<tr>\n  <td><\/td>\n  <td data-type=\"number\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n    <div style=\"display: none; position: absolute; width: 200px;\">\n      <div data-min=\"10\" data-max=\"45.6\" data-scale=\"1\"><\/div>\n      <span style=\"float: left;\"><\/span>\n      <span style=\"float: right;\"><\/span>\n    <\/div>\n  <\/td>\n  <td data-type=\"character\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n  <\/td>\n  <td data-type=\"character\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n  <\/td>\n<\/tr>","data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21"],[10.5,34.5,28.5,12.2,45.6,17.5,19.8,12.5,32.5,24.3,10,14.3,38,26.4,28.7,30.2,13.5,23.5,10.8,22.7,20.5],["A","A","A","A","A","A","A","B","B","B","B","B","B","B","C","C","C","C","C","C","C"],["Caso","Nao_caso","Nao_caso","Caso","Nao_caso","Caso","Caso","Caso","Nao_caso","Nao_caso","Caso","Caso","Nao_caso","Nao_caso","Nao_caso","Nao_caso","Caso","Nao_caso","Caso","Nao_caso","Nao_caso"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>renda<\/th>\n      <th>pop<\/th>\n      <th>casos<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":5,"scrollX":true,"columnDefs":[{"className":"dt-right","targets":1},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"orderCellsTop":true,"lengthMenu":[5,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-c8f676972cc65ca0b31d" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-c8f676972cc65ca0b31d">{"x":{"filter":"top","filterHTML":"<tr>\n  <td><\/td>\n  <td data-type=\"number\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n    <div style=\"display: none; position: absolute; width: 200px;\">\n      <div data-min=\"10\" data-max=\"45.6\" data-scale=\"1\"><\/div>\n      <span style=\"float: left;\"><\/span>\n      <span style=\"float: right;\"><\/span>\n    <\/div>\n  <\/td>\n  <td data-type=\"character\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n  <\/td>\n  <td data-type=\"character\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n  <\/td>\n<\/tr>","data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21"],[10.5,34.5,28.5,12.2,45.6,17.5,19.8,12.5,32.5,24.3,10,14.3,38,26.4,28.7,30.2,13.5,23.5,10.8,22.7,20.5],["A","A","A","A","A","A","A","B","B","B","B","B","B","B","C","C","C","C","C","C","C"],["Caso","Nao_caso","Nao_caso","Caso","Nao_caso","Caso","Caso","Caso","Nao_caso","Nao_caso","Caso","Caso","Nao_caso","Nao_caso","Nao_caso","Nao_caso","Caso","Nao_caso","Caso","Nao_caso","Nao_caso"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>renda<\/th>\n      <th>pop<\/th>\n      <th>casos<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":5,"scrollX":true,"columnDefs":[{"className":"dt-right","targets":1},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"orderCellsTop":true,"lengthMenu":[5,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
 <hr />
 <ul>
 <li>De posse desses dados no nível individual, é possível fazer a seguinte análise:</li>
@@ -658,7 +704,7 @@ Kawachi I. (Editors). Social Epidemiology. Oxford University Press, 2000) </smal
 <li><p>Envolvendo relações entre indivíduos – redes</p></li>
 </ul>
 </div>
-<div id="exercícios-propostos-2" class="section level2" number="13.13">
+<div id="exercícios-propostos-3" class="section level2" number="13.13">
 <h2><span class="header-section-number">13.13</span> Exercícios Propostos</h2>
 <ol style="list-style-type: decimal">
 <li><p>As estatísticas internacionais indicam que o Chile tem uma das mais altas taxas de mortalidade por câncer de estômago. O país caracteriza-se por conter altos níveis de nitrato em seu solo, situação rara no mundo, neste particular. Estabeleceu-se a suspeita de ser o nitrato, em altas concentrações, um agente causal da neoplasia. Comparações regionais dentro do país, contrastando áreas com altas e baixas concentrações de nitrato, mostraram a
@@ -683,7 +729,7 @@ diferenças em como/onde as pessoas entram em contato com
 um ao outro. Isto pode afetar as taxas de transmissão de Influenza</p></li>
 </ol>
 </div>
-<div id="bibliografia-sugerida-2" class="section level2" number="13.14">
+<div id="bibliografia-sugerida-3" class="section level2" number="13.14">
 <h2><span class="header-section-number">13.14</span> Bibliografia sugerida</h2>
 <p>BERKMAN, Lisa F.; KAWACHI, Ichirō; GLYMOUR, M. Maria (Ed.). Social epidemiology. Oxford University Press, 2014.</p>
 <p>DIEZ-ROUX, Ana V. Bringing context back into epidemiology: variables and fallacies in multilevel analysis. American journal of public health, v. 88, n. 2, p. 216-222, 1998.</p>
