aula 10 final.. erro 3

--- a/Curso_eco_2021/roteiro-para-a-execução-do-trabalho-final.html
+++ b/Curso_eco_2021/roteiro-para-a-execução-do-trabalho-final.html
@@ -30,8 +30,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="análise-espaço-temporal-instruções-e-dúvidas-para-o-trabalho-final.html"/>
-<link rel="next" href="anexo-i-roteiro-séries-temporais.html"/>
+<link rel="prev" href="análise-espaço-temporal.html"/>
+<link rel="next" href="anexo-i-exemplo-séries-temporais.html"/>
 <script src="libs/header-attrs-2.9/header-attrs.js"></script>
 <script src="libs/jquery-3.5.1/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -460,14 +460,36 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="11.4" data-path="dados-de-área-ii.html"><a href="dados-de-área-ii.html#bibliografia-sugerida-9"><i class="fa fa-check"></i><b>11.4</b> Bibliografia sugerida</a></li>
 </ul></li>
-<li class="chapter" data-level="12" data-path="análise-espaço-temporal-instruções-e-dúvidas-para-o-trabalho-final.html"><a href="análise-espaço-temporal-instruções-e-dúvidas-para-o-trabalho-final.html"><i class="fa fa-check"></i><b>12</b> Análise Espaço-Temporal &amp; Instruções e Dúvidas para o Trabalho Final</a></li>
+<li class="chapter" data-level="12" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html"><i class="fa fa-check"></i><b>12</b> Análise Espaço-Temporal</a>
+<ul>
+<li class="chapter" data-level="12.1" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#alguns-conceitos-1"><i class="fa fa-check"></i><b>12.1</b> Alguns Conceitos</a></li>
+<li class="chapter" data-level="12.2" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#processo-de-difusão-das-doenças"><i class="fa fa-check"></i><b>12.2</b> Processo de difusão das doenças</a>
+<ul>
+<li class="chapter" data-level="12.2.1" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#difusão-espacial"><i class="fa fa-check"></i><b>12.2.1</b> Difusão Espacial</a></li>
+<li class="chapter" data-level="12.2.2" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#espacializando-a-difusão-das-doenças"><i class="fa fa-check"></i><b>12.2.2</b> Espacializando a difusão das doenças</a></li>
+<li class="chapter" data-level="12.2.3" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#processo-de-difusão-das-doenças-1"><i class="fa fa-check"></i><b>12.2.3</b> Processo de difusão das doenças</a></li>
+<li class="chapter" data-level="12.2.4" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#modelos-de-difusão-de-doenças"><i class="fa fa-check"></i><b>12.2.4</b> Modelos de difusão de doenças</a></li>
+</ul></li>
+<li class="chapter" data-level="12.3" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#analise-exploratória-espaço-temporal"><i class="fa fa-check"></i><b>12.3</b> Analise Exploratória Espaço-temporal</a></li>
+<li class="chapter" data-level="12.4" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#cluster-espaço-temporal"><i class="fa fa-check"></i><b>12.4</b> Cluster Espaço-Temporal</a>
+<ul>
+<li class="chapter" data-level="12.4.1" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#a-estatística-scan"><i class="fa fa-check"></i><b>12.4.1</b> A estatística scan</a></li>
+<li class="chapter" data-level="12.4.2" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#aplicação-1---leptospirose-no-rio-de-janeiro"><i class="fa fa-check"></i><b>12.4.2</b> Aplicação 1 - Leptospirose no Rio de Janeiro</a></li>
+<li class="chapter" data-level="12.4.3" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#aplicação-2---arboviroses-no-rio-de-janeiro"><i class="fa fa-check"></i><b>12.4.3</b> Aplicação 2 - Arboviroses no Rio de Janeiro</a></li>
+</ul></li>
+<li class="chapter" data-level="12.5" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#modelagem-estatística-espaço-temporal"><i class="fa fa-check"></i><b>12.5</b> Modelagem Estatística Espaço-temporal</a>
+<ul>
+<li class="chapter" data-level="12.5.1" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#alguns-resultados"><i class="fa fa-check"></i><b>12.5.1</b> Alguns resultados</a></li>
+</ul></li>
+<li class="chapter" data-level="12.6" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#bibliografia-sugerida-10"><i class="fa fa-check"></i><b>12.6</b> Bibliografia sugerida</a></li>
+</ul></li>
 <li class="chapter" data-level="13" data-path="roteiro-para-a-execução-do-trabalho-final.html"><a href="roteiro-para-a-execução-do-trabalho-final.html"><i class="fa fa-check"></i><b>13</b> Roteiro para a execução do trabalho final</a>
 <ul>
 <li class="chapter" data-level="13.0.1" data-path="roteiro-para-a-execução-do-trabalho-final.html"><a href="roteiro-para-a-execução-do-trabalho-final.html#sugestões-de-locais-para-baixar-os-dados-e-os-mapas"><i class="fa fa-check"></i><b>13.0.1</b> Sugestões de locais para baixar os dados e os mapas</a></li>
 <li class="chapter" data-level="13.1" data-path="roteiro-para-a-execução-do-trabalho-final.html"><a href="roteiro-para-a-execução-do-trabalho-final.html#ficha-de-avaliação"><i class="fa fa-check"></i><b>13.1</b> Ficha de Avaliação</a></li>
 <li class="chapter" data-level="13.2" data-path="roteiro-para-a-execução-do-trabalho-final.html"><a href="roteiro-para-a-execução-do-trabalho-final.html#fim"><i class="fa fa-check"></i><b>13.2</b> FIM</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="anexo-i-roteiro-séries-temporais.html"><a href="anexo-i-roteiro-séries-temporais.html"><i class="fa fa-check"></i>Anexo I - Roteiro séries temporais</a></li>
+<li class="chapter" data-level="" data-path="anexo-i-exemplo-séries-temporais.html"><a href="anexo-i-exemplo-séries-temporais.html"><i class="fa fa-check"></i>Anexo I - Exemplo séries temporais</a></li>
 <li class="chapter" data-level="14" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html"><i class="fa fa-check"></i><b>14</b> Anexo II - Exemplo de Analise Espacial</a>
 <ul>
 <li class="chapter" data-level="14.1" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html#exemplo-com-os-dados-de-dengue-em-douradosms-1"><i class="fa fa-check"></i><b>14.1</b> Exemplo com os dados de dengue em Dourados/MS</a></li>
@@ -476,7 +498,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="14.4" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html#matriz-de-vizinhança-2"><i class="fa fa-check"></i><b>14.4</b> Matriz de Vizinhança</a></li>
 <li class="chapter" data-level="14.5" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html#autocorrelação-espacial-1"><i class="fa fa-check"></i><b>14.5</b> Autocorrelação Espacial</a></li>
 <li class="chapter" data-level="14.6" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html#modelos-linear-car-e-gwr"><i class="fa fa-check"></i><b>14.6</b> Modelos Linear, CAR e GWR</a></li>
-<li class="chapter" data-level="14.7" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html#bibliografia-sugerida-10"><i class="fa fa-check"></i><b>14.7</b> Bibliografia sugerida</a></li>
+<li class="chapter" data-level="14.7" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html#bibliografia-sugerida-11"><i class="fa fa-check"></i><b>14.7</b> Bibliografia sugerida</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://ogcruz.github.io" target="blank">Página Inicial</a></li>
@@ -561,8 +583,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
           </div>
         </div>
       </div>
-<a href="análise-espaço-temporal-instruções-e-dúvidas-para-o-trabalho-final.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="anexo-i-roteiro-séries-temporais.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="análise-espaço-temporal.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="anexo-i-exemplo-séries-temporais.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
