--- a/Curso_eco_2021/estudos-ecológicos.html
+++ b/Curso_eco_2021/estudos-ecológicos.html
@@ -460,14 +460,36 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="11.4" data-path="dados-de-área-ii.html"><a href="dados-de-área-ii.html#bibliografia-sugerida-9"><i class="fa fa-check"></i><b>11.4</b> Bibliografia sugerida</a></li>
 </ul></li>
-<li class="chapter" data-level="12" data-path="análise-espaço-temporal-instruções-e-dúvidas-para-o-trabalho-final.html"><a href="análise-espaço-temporal-instruções-e-dúvidas-para-o-trabalho-final.html"><i class="fa fa-check"></i><b>12</b> Análise Espaço-Temporal &amp; Instruções e Dúvidas para o Trabalho Final</a></li>
+<li class="chapter" data-level="12" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html"><i class="fa fa-check"></i><b>12</b> Análise Espaço-Temporal</a>
+<ul>
+<li class="chapter" data-level="12.1" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#alguns-conceitos-1"><i class="fa fa-check"></i><b>12.1</b> Alguns Conceitos</a></li>
+<li class="chapter" data-level="12.2" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#processo-de-difusão-das-doenças"><i class="fa fa-check"></i><b>12.2</b> Processo de difusão das doenças</a>
+<ul>
+<li class="chapter" data-level="12.2.1" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#difusão-espacial"><i class="fa fa-check"></i><b>12.2.1</b> Difusão Espacial</a></li>
+<li class="chapter" data-level="12.2.2" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#espacializando-a-difusão-das-doenças"><i class="fa fa-check"></i><b>12.2.2</b> Espacializando a difusão das doenças</a></li>
+<li class="chapter" data-level="12.2.3" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#processo-de-difusão-das-doenças-1"><i class="fa fa-check"></i><b>12.2.3</b> Processo de difusão das doenças</a></li>
+<li class="chapter" data-level="12.2.4" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#modelos-de-difusão-de-doenças"><i class="fa fa-check"></i><b>12.2.4</b> Modelos de difusão de doenças</a></li>
+</ul></li>
+<li class="chapter" data-level="12.3" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#analise-exploratória-espaço-temporal"><i class="fa fa-check"></i><b>12.3</b> Analise Exploratória Espaço-temporal</a></li>
+<li class="chapter" data-level="12.4" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#cluster-espaço-temporal"><i class="fa fa-check"></i><b>12.4</b> Cluster Espaço-Temporal</a>
+<ul>
+<li class="chapter" data-level="12.4.1" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#a-estatística-scan"><i class="fa fa-check"></i><b>12.4.1</b> A estatística scan</a></li>
+<li class="chapter" data-level="12.4.2" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#aplicação-1---leptospirose-no-rio-de-janeiro"><i class="fa fa-check"></i><b>12.4.2</b> Aplicação 1 - Leptospirose no Rio de Janeiro</a></li>
+<li class="chapter" data-level="12.4.3" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#aplicação-2---arboviroses-no-rio-de-janeiro"><i class="fa fa-check"></i><b>12.4.3</b> Aplicação 2 - Arboviroses no Rio de Janeiro</a></li>
+</ul></li>
+<li class="chapter" data-level="12.5" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#modelagem-estatística-espaço-temporal"><i class="fa fa-check"></i><b>12.5</b> Modelagem Estatística Espaço-temporal</a>
+<ul>
+<li class="chapter" data-level="12.5.1" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#alguns-resultados"><i class="fa fa-check"></i><b>12.5.1</b> Alguns resultados</a></li>
+</ul></li>
+<li class="chapter" data-level="12.6" data-path="análise-espaço-temporal.html"><a href="análise-espaço-temporal.html#bibliografia-sugerida-10"><i class="fa fa-check"></i><b>12.6</b> Bibliografia sugerida</a></li>
+</ul></li>
 <li class="chapter" data-level="13" data-path="roteiro-para-a-execução-do-trabalho-final.html"><a href="roteiro-para-a-execução-do-trabalho-final.html"><i class="fa fa-check"></i><b>13</b> Roteiro para a execução do trabalho final</a>
 <ul>
 <li class="chapter" data-level="13.0.1" data-path="roteiro-para-a-execução-do-trabalho-final.html"><a href="roteiro-para-a-execução-do-trabalho-final.html#sugestões-de-locais-para-baixar-os-dados-e-os-mapas"><i class="fa fa-check"></i><b>13.0.1</b> Sugestões de locais para baixar os dados e os mapas</a></li>
 <li class="chapter" data-level="13.1" data-path="roteiro-para-a-execução-do-trabalho-final.html"><a href="roteiro-para-a-execução-do-trabalho-final.html#ficha-de-avaliação"><i class="fa fa-check"></i><b>13.1</b> Ficha de Avaliação</a></li>
 <li class="chapter" data-level="13.2" data-path="roteiro-para-a-execução-do-trabalho-final.html"><a href="roteiro-para-a-execução-do-trabalho-final.html#fim"><i class="fa fa-check"></i><b>13.2</b> FIM</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="anexo-i-roteiro-séries-temporais.html"><a href="anexo-i-roteiro-séries-temporais.html"><i class="fa fa-check"></i>Anexo I - Roteiro séries temporais</a></li>
+<li class="chapter" data-level="" data-path="anexo-i-exemplo-séries-temporais.html"><a href="anexo-i-exemplo-séries-temporais.html"><i class="fa fa-check"></i>Anexo I - Exemplo séries temporais</a></li>
 <li class="chapter" data-level="14" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html"><i class="fa fa-check"></i><b>14</b> Anexo II - Exemplo de Analise Espacial</a>
 <ul>
 <li class="chapter" data-level="14.1" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html#exemplo-com-os-dados-de-dengue-em-douradosms-1"><i class="fa fa-check"></i><b>14.1</b> Exemplo com os dados de dengue em Dourados/MS</a></li>
@@ -476,7 +498,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="14.4" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html#matriz-de-vizinhança-2"><i class="fa fa-check"></i><b>14.4</b> Matriz de Vizinhança</a></li>
 <li class="chapter" data-level="14.5" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html#autocorrelação-espacial-1"><i class="fa fa-check"></i><b>14.5</b> Autocorrelação Espacial</a></li>
 <li class="chapter" data-level="14.6" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html#modelos-linear-car-e-gwr"><i class="fa fa-check"></i><b>14.6</b> Modelos Linear, CAR e GWR</a></li>
-<li class="chapter" data-level="14.7" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html#bibliografia-sugerida-10"><i class="fa fa-check"></i><b>14.7</b> Bibliografia sugerida</a></li>
+<li class="chapter" data-level="14.7" data-path="anexo-ii-exemplo-de-analise-espacial.html"><a href="anexo-ii-exemplo-de-analise-espacial.html#bibliografia-sugerida-11"><i class="fa fa-check"></i><b>14.7</b> Bibliografia sugerida</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://ogcruz.github.io" target="blank">Página Inicial</a></li>
@@ -728,7 +750,7 @@ Kawachi I. (Editors). Social Epidemiology. Oxford University Press, 2000) </smal
 </p>
 <hr />
 <p><strong>Um outro exemplo</strong>: Um pesquisador deseja estudar a relação entre acidentes de trânsito e a renda em três cidade distintas (A, B e C).</p>
-<p><img src="ecologico_book_files/figure-html/unnamed-chunk-16-1.png" width="672" style="display: block; margin: auto;" /></p>
+<p><img src="ecologico_book_files/figure-html/unnamed-chunk-17-1.png" width="672" style="display: block; margin: auto;" /></p>
 <table>
 <thead>
 <tr class="header">
@@ -759,7 +781,7 @@ Kawachi I. (Editors). Social Epidemiology. Oxford University Press, 2000) </smal
 <ul>
 <li>Observando o gráfico abaixo, o pesquisador observa um possível associaçãom entre a renda e a taxa de acidentes de trânsito;</li>
 </ul>
-<p><img src="ecologico_book_files/figure-html/unnamed-chunk-18-1.png" width="672" style="display: block; margin: auto;" /></p>
+<p><img src="ecologico_book_files/figure-html/unnamed-chunk-19-1.png" width="672" style="display: block; margin: auto;" /></p>
 <ul>
 <li>Quanto maior a renda, maior será a taxa de acidentes de trânsito.</li>
 </ul>
@@ -767,13 +789,13 @@ Kawachi I. (Editors). Social Epidemiology. Oxford University Press, 2000) </smal
 <ul>
 <li>Observando os microdados, ou seja, os dados no nível individual, temos o seguinte:</li>
 </ul>
-<div id="htmlwidget-dd309a93660fac7f2ccc" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-dd309a93660fac7f2ccc">{"x":{"filter":"top","filterHTML":"<tr>\n  <td><\/td>\n  <td data-type=\"number\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n    <div style=\"display: none; position: absolute; width: 200px;\">\n      <div data-min=\"10\" data-max=\"45.6\" data-scale=\"1\"><\/div>\n      <span style=\"float: left;\"><\/span>\n      <span style=\"float: right;\"><\/span>\n    <\/div>\n  <\/td>\n  <td data-type=\"character\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n  <\/td>\n  <td data-type=\"character\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n  <\/td>\n<\/tr>","data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21"],[10.5,34.5,28.5,12.2,45.6,17.5,19.8,12.5,32.5,24.3,10,14.3,38,26.4,28.7,30.2,13.5,23.5,10.8,22.7,20.5],["A","A","A","A","A","A","A","B","B","B","B","B","B","B","C","C","C","C","C","C","C"],["Caso","Nao_caso","Nao_caso","Caso","Nao_caso","Caso","Caso","Caso","Nao_caso","Nao_caso","Caso","Caso","Nao_caso","Nao_caso","Nao_caso","Nao_caso","Caso","Nao_caso","Caso","Nao_caso","Nao_caso"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>renda<\/th>\n      <th>pop<\/th>\n      <th>casos<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":5,"scrollX":true,"columnDefs":[{"className":"dt-right","targets":1},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"orderCellsTop":true,"lengthMenu":[5,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-54fe66f27333a9501156" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-54fe66f27333a9501156">{"x":{"filter":"top","filterHTML":"<tr>\n  <td><\/td>\n  <td data-type=\"number\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n    <div style=\"display: none; position: absolute; width: 200px;\">\n      <div data-min=\"10\" data-max=\"45.6\" data-scale=\"1\"><\/div>\n      <span style=\"float: left;\"><\/span>\n      <span style=\"float: right;\"><\/span>\n    <\/div>\n  <\/td>\n  <td data-type=\"character\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n  <\/td>\n  <td data-type=\"character\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n  <\/td>\n<\/tr>","data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21"],[10.5,34.5,28.5,12.2,45.6,17.5,19.8,12.5,32.5,24.3,10,14.3,38,26.4,28.7,30.2,13.5,23.5,10.8,22.7,20.5],["A","A","A","A","A","A","A","B","B","B","B","B","B","B","C","C","C","C","C","C","C"],["Caso","Nao_caso","Nao_caso","Caso","Nao_caso","Caso","Caso","Caso","Nao_caso","Nao_caso","Caso","Caso","Nao_caso","Nao_caso","Nao_caso","Nao_caso","Caso","Nao_caso","Caso","Nao_caso","Nao_caso"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>renda<\/th>\n      <th>pop<\/th>\n      <th>casos<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":5,"scrollX":true,"columnDefs":[{"className":"dt-right","targets":1},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"orderCellsTop":true,"lengthMenu":[5,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
 <hr />
 <ul>
 <li>De posse desses dados no nível individual, é possível fazer a seguinte análise:</li>
 </ul>
-<p><img src="ecologico_book_files/figure-html/unnamed-chunk-20-1.png" width="672" style="display: block; margin: auto;" /></p>
+<p><img src="ecologico_book_files/figure-html/unnamed-chunk-21-1.png" width="672" style="display: block; margin: auto;" /></p>
 <hr />
 <ul>
 <li><p>Dessa forma observamos que os indivíduos que sofreram algum tipo de acidente de trânsito, apresentam a menor renda;</p></li>
