--- a/curso_2025/index.html
+++ b/curso_2025/index.html
@@ -123,7 +123,7 @@ ul.task-list li input[type="checkbox"] {
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./sql.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">2</span>&nbsp; <span class="chapter-title">Introdução ao SQL &amp; Banco de Dados</span></span></a>
+ <span class="menu-text"><span class="chapter-number">2</span>&nbsp; <span class="chapter-title">Banco de Dados &amp; SQL</span></span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -147,8 +147,14 @@ ul.task-list li input[type="checkbox"] {
         <nav id="TOC" role="doc-toc" class="toc-active">
     <h2 id="toc-title">Conteúdo</h2>
    
+  <ul>
+  <li><a href="#apresentação-do-curso" id="toc-apresentação-do-curso" class="nav-link active" data-scroll-target="#apresentação-do-curso">Apresentação do Curso</a>
   <ul class="collapse">
-  <li><a href="#apresentação-do-curso" id="toc-apresentação-do-curso" class="nav-link active" data-scroll-target="#apresentação-do-curso">Apresentação do Curso</a></li>
+  <li><a href="#ciência-de-dados-aplicada-à-epidemiologia-i---2025" id="toc-ciência-de-dados-aplicada-à-epidemiologia-i---2025" class="nav-link" data-scroll-target="#ciência-de-dados-aplicada-à-epidemiologia-i---2025">Ciência de Dados Aplicada à Epidemiologia I - 2025</a></li>
+  <li><a href="#objetivo" id="toc-objetivo" class="nav-link" data-scroll-target="#objetivo">OBJETIVO</a></li>
+  <li><a href="#conteúdo" id="toc-conteúdo" class="nav-link" data-scroll-target="#conteúdo">CONTEÚDO</a></li>
+  <li><a href="#avaliação" id="toc-avaliação" class="nav-link" data-scroll-target="#avaliação">AVALIAÇÃO</a></li>
+  </ul></li>
   </ul>
 </nav>
     </div>
@@ -223,29 +229,40 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li>Leitura de dados locais (CSV, Excel, etc.)</li>
 <li>Consumo de dados remotos: APIs, FTP e web scraping</li>
-<li>Integração do DuckDB (SQL) com R para manipulação de dados locais e em nuvem</li>
+<li>Integração do DuckDB (SQL) com <code>R</code> para manipulação de dados locais e em nuvem</li>
 </ul></li>
 <li><p>Limpeza, Transformação e Armazenamento de Dados</p>
 <ul>
-<li>Limpeza e padronização de bases de dados (uso do dplyr, tidyr, janitor, etc.)</li>
-<li>Manipulação eficiente com data.frame, tibble, e data.table</li>
+<li>Limpeza e padronização de bases de dados (uso do <code>dplyr</code>, <code>tidyr</code>, <code>janitor</code>, etc.)</li>
+<li>Manipulação eficiente com <code>data.frame</code>, <code>tibble</code>, e <code>data.table</code></li>
 <li>Armazenamento em bancos relacionais com SQL e DuckDB</li>
 </ul></li>
 <li><p>Visualização de dados e comunicação</p>
 <ul>
-<li>Visualização de dados com ggplot2</li>
+<li>Visualização de dados com <code>ggplot2</code></li>
 <li>Introdução ao Rmarkdown para documentação e relatórios dinâmicos</li>
 <li>Dashboards com Shiny</li>
-<li>Visualizações interativas com leaflet e plotly</li>
+<li>Visualizações interativas com <code>leaflet</code> e <code>plotly</code></li>
 </ul></li>
 </ol>
 </section>
-<section id="avaliação-trabalho-final" class="level3">
-<h3 class="anchored" data-anchor-id="avaliação-trabalho-final">Avaliação trabalho final</h3>
-<p>Prazo Final 31 de Outubro de 2025 Trabalho individual ou em dupla Formato Quarto/Rmarkdown</p>
-<p>Os seguintes itens devem constar do Trabalho final</p>
-<p>formato de relatório com texto descrevendo os dados e procedimentos importação de dados externos preparação/limpeza dos dados usando o tidyverse criação de novas variaveis geração de pelo menos um grafico e uma tabela</p>
-<p>de preferencia use seus dados , caso não seja possível use dados públicos.</p>
+<section id="avaliação" class="level3">
+<h3 class="anchored" data-anchor-id="avaliação">AVALIAÇÃO</h3>
+<p><strong>Trabalho final</strong></p>
+<ul>
+<li>Prazo: 31 de outubro de 2025</li>
+<li>Trabalho individual ou em dupla</li>
+<li>Formato Quarto/Rmarkdown</li>
+</ul>
+<p>O trabalho deve ser em formato de relatório e conter:</p>
+<ul>
+<li>descrição dos dados,</li>
+<li>procedimentos de importação de dados externos,</li>
+<li>preparação/limpeza dos dados usando o <code>tidyverse</code>,</li>
+<li>criação de novas variáveis,</li>
+<li>geração de pelo menos um gráfico e uma tabela.</li>
+</ul>
+<p>De preferência, use seus dados. Caso não seja possível, use dados públicos.</p>
 
 
 </section>
