aula sql 2 - last minute

--- a/curso_2025/sql.html
+++ b/curso_2025/sql.html
@@ -492,11 +492,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <section id="principais-funções-usadas-em-sql" class="level2" data-number="3.5">
 <h2 data-number="3.5" class="anchored" data-anchor-id="principais-funções-usadas-em-sql"><span class="header-section-number">3.5</span> Principais funções usadas em <code>SQL</code></h2>
 <p>Seguem algumas funções comumente usadas em <code>SQL</code>, lembre-se que cada versão e SGDB usa dialetos diferentes.</p>
-<p>Funções simples (mais comumente usadas):</p>
+<p>Funções matemáticas (mais comumente usadas):</p>
 <ul>
 <li><code>ABS(n)</code>: Devolve o valor absoluto de <code>n</code>.</li>
 <li><code>CEIL(n)</code>: Obtém o valor inteiro imediatamente superior ou igual a <code>n</code>.</li>
-<li><code>FLOOT(n)</code>: Devolve o valor inteiro imediatamente inferior ou igual a <code>n</code>.</li>
+<li><code>FLOOR(n)</code>: Devolve o valor inteiro imediatamente inferior ou igual a <code>n</code>.</li>
 <li><code>MOD(m, n)</code>: Devolve o resto resultante de dividir <code>m</code> entre <code>n</code>.</li>
 <li><code>POWER(m, exponente)</code>: Calcula a potência de um número.</li>
 <li><code>ROUND(número [, m])</code>: Arredonda números com o número de dígitos de precisão indicados.</li>
