--- a/curso_2025/index.html
+++ b/curso_2025/index.html
@@ -151,6 +151,8 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#apresentação-do-curso" id="toc-apresentação-do-curso" class="nav-link active" data-scroll-target="#apresentação-do-curso">Apresentação do Curso</a>
   <ul class="collapse">
   <li><a href="#ciência-de-dados-aplicada-à-epidemiologia-i---2025" id="toc-ciência-de-dados-aplicada-à-epidemiologia-i---2025" class="nav-link" data-scroll-target="#ciência-de-dados-aplicada-à-epidemiologia-i---2025">Ciência de Dados Aplicada à Epidemiologia I - 2025</a></li>
+  <li><a href="#links" id="toc-links" class="nav-link" data-scroll-target="#links">Links:</a></li>
+  <li><a href="#aulas-gravadas" id="toc-aulas-gravadas" class="nav-link" data-scroll-target="#aulas-gravadas">Aulas Gravadas</a></li>
   <li><a href="#objetivo" id="toc-objetivo" class="nav-link" data-scroll-target="#objetivo">OBJETIVO</a></li>
   <li><a href="#conteúdo" id="toc-conteúdo" class="nav-link" data-scroll-target="#conteúdo">CONTEÚDO</a></li>
   <li><a href="#avaliação" id="toc-avaliação" class="nav-link" data-scroll-target="#avaliação">AVALIAÇÃO</a></li>
@@ -192,6 +194,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
+<p><img src="figuras/barra_procc _ensp.png" class="img-fluid"></p>
 <section id="apresentação-do-curso" class="level1 unnumbered">
 <h1 class="unnumbered">Apresentação do Curso</h1>
 <section id="ciência-de-dados-aplicada-à-epidemiologia-i---2025" class="level3">
@@ -204,6 +207,15 @@ ul.task-list li input[type="checkbox"] {
 <section id="oswaldo-g-cruz-laís-picinini-freitas" class="level4">
 <h4 class="anchored" data-anchor-id="oswaldo-g-cruz-laís-picinini-freitas">Oswaldo G Cruz &amp; Laís Picinini Freitas</h4>
 </section>
+</section>
+<section id="links" class="level3">
+<h3 class="anchored" data-anchor-id="links">Links:</h3>
+<p><a href="https://us06web.zoom.us/j/81193555152?pwd=8vQwnoHIVIulC642sSCfglZMvUcVeb.1">link Principal - Zoom ENSP</a></p>
+<p><a href="https://us02web.zoom.us/j/85434113093?pwd=h1ucvdaXUwzEvOXohufjwbQ0LcBWIP.1">link alternativo - Zoom Oswaldo</a></p>
+</section>
+<section id="aulas-gravadas" class="level3">
+<h3 class="anchored" data-anchor-id="aulas-gravadas">Aulas Gravadas</h3>
+<p><a href="https://own.procc.fiocruz.br/index.php/s/kVPT8IHm5jamXFD">Aulas Gravadas</a></p>
 </section>
 <section id="objetivo" class="level3">
 <h3 class="anchored" data-anchor-id="objetivo">OBJETIVO</h3>
