aula sql 3C - last minute again

--- a/curso_2025/index.html
+++ b/curso_2025/index.html
@@ -128,6 +128,12 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
+  <a href="./tidy_import.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">Importando e arrumando dados</span></span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
   <a href="./references.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Referencias</span></a>
   </div>
@@ -136,6 +142,12 @@ ul.task-list li input[type="checkbox"] {
   <div class="sidebar-item-container"> 
   <a href="./anexo1.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Anexo 1 - Instalando o duckdb</span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./anexo_xml_json.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Anexo 2 - XML &amp; JSON</span></a>
   </div>
 </li>
     </ul>
