aula sql 5c - regex e funcao de importacao revisadas

--- a/curso_2025/anexo_xml_json.html
+++ b/curso_2025/anexo_xml_json.html
@@ -187,7 +187,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./regex.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Expressões Regulares</span></a>
+ <span class="menu-text">Anexo 3 - Expressões Regulares</span></a>
   </div>
 </li>
     </ul>
@@ -713,8 +713,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="./regex.html" class="pagination-link" aria-label="Expressões Regulares">
-        <span class="nav-page-text">Expressões Regulares</span> <i class="bi bi-arrow-right-short"></i>
+      <a href="./regex.html" class="pagination-link" aria-label="Anexo 3 - Expressões Regulares">
+        <span class="nav-page-text">Anexo 3 - Expressões Regulares</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
