--- a/curso_2025/index.html
+++ b/curso_2025/index.html
@@ -153,7 +153,7 @@ ul.task-list li input[type="checkbox"] {
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./regex.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Expressões Regulares</span></a>
+ <span class="menu-text">Anexo 3 - Expressões Regulares</span></a>
   </div>
 </li>
     </ul>
