--- a/curso_2025/sql.html
+++ b/curso_2025/sql.html
@@ -187,7 +187,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./regex.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Expressões Regulares</span></a>
+ <span class="menu-text">Anexo 3 - Expressões Regulares</span></a>
   </div>
 </li>
     </ul>
